# summarize-300-tg-bot

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
